V2 Launch: Add Gemini 3 analysis, mirror match findings, SEO improvements
- Add deep dive section: Gemini's 'Institutional Deception' pattern
- Add mirror match analysis: Gemini cooperates with itself (16 games)
- Update stats: 162 games, 15,736 decisions
- Improve SEO: FAQ schema, better meta tags, sitemap, robots.txt
- Add v2 launch marketing plan

--- a/game.html
+++ b/game.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Primary Meta Tags -->
-  <title>Play So Long Sucker - AI Negotiation Game</title>
-  <meta name="title" content="Play So Long Sucker - AI Negotiation Game">
-  <meta name="description" content="Play the classic 1950 board game by John Nash. A 4-player strategy game where betrayal is mathematically required to win. Features AI opponents powered by LLMs.">
-  <meta name="keywords" content="board game, strategy game, John Nash, game theory, negotiation, AI game, multiplayer game, betrayal game">
+  <title>Play Against AI - So Long Sucker | Can You Out-Deceive Gemini 3?</title>
+  <meta name="title" content="Play Against AI - So Long Sucker | Can You Out-Deceive Gemini 3?">
+  <meta name="description" content="Play John Nash's 1950 betrayal game against AI models like Gemini 3, GPT, Kimi. Form alliances, make promises, then betray - or be betrayed. Uses your API key.">
+  <meta name="keywords" content="play AI game, Gemini 3 game, AI opponent, LLM game, John Nash game, strategy game, negotiation game, betrayal game, GPT game, AI benchmark">
   <meta name="author" content="lout33">
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="index, follow, max-image-preview:large">
 
   <!-- Favicon - SVG with emoji for simplicity -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎲</text></svg>">
@@ -22,21 +22,21 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://so-long-sucker.vercel.app/">
-  <meta property="og:title" content="So Long Sucker - The Game of Negotiation & Betrayal">
-  <meta property="og:description" content="Play the classic 1950 board game by John Nash. A 4-player strategy game where betrayal is mathematically required to win.">
+  <meta property="og:url" content="https://so-long-sucker.vercel.app/game.html">
+  <meta property="og:title" content="Play Against AI - Can You Out-Deceive Gemini 3?">
+  <meta property="og:description" content="Challenge Gemini 3, GPT, Kimi in John Nash's betrayal game. Form alliances, make promises, then betray - before they betray you.">
   <meta property="og:image" content="https://so-long-sucker.vercel.app/og-image.svg">
   <meta property="og:site_name" content="So Long Sucker">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://so-long-sucker.vercel.app/">
-  <meta name="twitter:title" content="So Long Sucker - The Game of Negotiation & Betrayal">
-  <meta name="twitter:description" content="Play the classic 1950 board game by John Nash. A 4-player strategy game where betrayal is mathematically required to win.">
+  <meta name="twitter:url" content="https://so-long-sucker.vercel.app/game.html">
+  <meta name="twitter:title" content="Can You Out-Deceive Gemini 3?">
+  <meta name="twitter:description" content="Play John Nash's betrayal game against AI. Form alliances, then betray - or be betrayed. Which AI will you face?">
   <meta name="twitter:image" content="https://so-long-sucker.vercel.app/og-image.svg">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://so-long-sucker.vercel.app/">
+  <link rel="canonical" href="https://so-long-sucker.vercel.app/game.html">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
