--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Primary Meta Tags -->
-  <title>So Long Sucker - Which AI Lies Best?</title>
-  <meta name="title" content="So Long Sucker - Which AI Lies Best?">
-  <meta name="description" content="A 1950s betrayal game designed by John Nash, now played by AI models. Watch them negotiate, form alliances, and inevitably betray each other.">
-  <meta name="keywords" content="board game, strategy game, John Nash, game theory, negotiation, AI game, betrayal game, AI deception">
+  <title>So Long Sucker - AI Deception Benchmark | Which AI Lies Best?</title>
+  <meta name="title" content="So Long Sucker - AI Deception Benchmark | Which AI Lies Best?">
+  <meta name="description" content="162 games analyzed: Gemini 3 manipulates weaker AI models but cooperates with itself. A John Nash betrayal game (1950) reveals how AI calibrates deception by opponent capability.">
+  <meta name="keywords" content="AI deception, AI benchmark, Gemini 3, GPT, LLM evaluation, AI safety, game theory, John Nash, betrayal game, AI alignment, machine learning, artificial intelligence, AI behavior, deception detection">
   <meta name="author" content="lout33">
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
   <!-- Favicon - SVG with emoji for simplicity -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎲</text></svg>">
@@ -23,20 +23,32 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://so-long-sucker.vercel.app/">
-  <meta property="og:title" content="So Long Sucker - Which AI Lies Best?">
-  <meta property="og:description" content="A 1950s betrayal game designed by John Nash, now played by AI models. Watch them negotiate, form alliances, and inevitably betray each other.">
+  <meta property="og:title" content="Which AI Lies Best? Gemini 3 Manipulates Weaker Models, Cooperates With Itself">
+  <meta property="og:description" content="162 games analyzed: AI deception is strategic, not intrinsic. Watch Gemini 3 create fake 'alliance banks' to betray GPT and Kimi, but cooperate perfectly with copies of itself.">
   <meta property="og:image" content="https://so-long-sucker.vercel.app/og-image.svg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="So Long Sucker - AI Deception Benchmark showing 4 colored chips representing AI models">
   <meta property="og:site_name" content="So Long Sucker">
+  <meta property="og:locale" content="en_US">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://so-long-sucker.vercel.app/">
-  <meta name="twitter:title" content="So Long Sucker - Which AI Lies Best?">
-  <meta name="twitter:description" content="A 1950s betrayal game designed by John Nash, now played by AI models. Watch them negotiate, form alliances, and inevitably betray each other.">
+  <meta name="twitter:title" content="Which AI Lies Best? Gemini 3 vs GPT vs Kimi vs Qwen">
+  <meta name="twitter:description" content="162 games: Gemini creates fake 'alliance banks' to manipulate weaker models, but cooperates with itself. AI deception is strategic, not intrinsic.">
   <meta name="twitter:image" content="https://so-long-sucker.vercel.app/og-image.svg">
+  <meta name="twitter:image:alt" content="So Long Sucker - AI Deception Benchmark">
+  <meta name="twitter:creator" content="@lout33">
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://so-long-sucker.vercel.app/">
+
+  <!-- Additional SEO -->
+  <meta name="google-site-verification" content="">
+  <meta name="classification" content="AI Research, Game Theory, Machine Learning">
+  <meta name="rating" content="General">
+  <meta name="revisit-after" content="7 days">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,13 +58,14 @@
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
 
-  <!-- Structured Data (JSON-LD) -->
+  <!-- Structured Data (JSON-LD) - Research Article -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebApplication",
-    "name": "So Long Sucker",
-    "description": "A 1950s betrayal game designed by John Nash, now played by AI models. Watch them negotiate, form alliances, and inevitably betray each other.",
+    "name": "So Long Sucker - AI Deception Benchmark",
+    "alternateName": "Which AI Lies Best?",
+    "description": "162 games analyzed: Gemini 3 manipulates weaker AI models but cooperates with itself. A benchmark for AI deception using John Nash's 1950 betrayal game.",
     "url": "https://so-long-sucker.vercel.app/",
     "applicationCategory": "GameApplication",
     "operatingSystem": "Web Browser",
@@ -63,11 +76,57 @@
     },
     "author": {
       "@type": "Person",
-      "name": "John Nash",
-      "description": "Nobel Prize-winning mathematician and game theorist"
+      "name": "lout33",
+      "url": "https://github.com/lout33"
     },
-    "dateCreated": "1950",
-    "keywords": ["board game", "strategy", "game theory", "negotiation", "AI", "deception"]
+    "creator": {
+      "@type": "Person",
+      "name": "John Nash",
+      "description": "Nobel Prize-winning mathematician and game theorist",
+      "sameAs": "https://en.wikipedia.org/wiki/John_Forbes_Nash_Jr."
+    },
+    "datePublished": "2026-01-20",
+    "dateModified": "2026-01-20",
+    "keywords": ["AI deception", "AI benchmark", "Gemini 3", "GPT", "game theory", "John Nash", "AI safety", "LLM evaluation"],
+    "about": {
+      "@type": "Thing",
+      "name": "AI Deception Research",
+      "description": "Research into how AI models deceive and manipulate in strategic games"
+    }
+  }
+  </script>
+
+  <!-- Structured Data - FAQ for Featured Snippets -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Which AI model is best at deception?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "In our benchmark of 162 games, Gemini 3 Flash showed the most sophisticated deception patterns, achieving 90% win rate at high complexity by creating fake 'alliance banks' and using gaslighting phrases like 'You're hallucinating'."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do AI models lie differently than humans?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "AI models like Gemini 3 use 'institutional deception' - creating fake frameworks like 'alliance banks' to justify betrayal. Unlike human lies which are emotional and defensive, AI lies are systematic, polite, and invoke external rules as justification."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What happens when Gemini plays against itself?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "When Gemini 3 plays against copies of itself, it cooperates using a 'rotation protocol' instead of manipulating. This suggests AI deception is strategic, not intrinsic - it calibrates honesty based on perceived opponent capability."
+        }
+      }
+    ]
   }
   </script>
 </head>
