--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                     >Gemini 3 Analysis</a
                 >
                 <a href="#leaderboard" class="nav-link">Leaderboard</a>
+                <a href="blog.html" class="nav-link">Research Blog</a>
                 <a href="game.html" class="nav-link nav-cta">Play Against AI</a>
             </div>
         </nav>
@@ -243,6 +244,13 @@
                     class="btn btn-primary btn-large hero-cta-btn"
                 >
                     Play Against AI
+                </a>
+                <a
+                    href="blog.html"
+                    class="btn btn-outline btn-large"
+                    style="margin-left: var(--space-md);"
+                >
+                    Read Research
                 </a>
             </div>
         </section>
