--- a/blog.html
+++ b/blog.html
@@ -875,5 +875,12 @@
 
         <p class="note">Study conducted January 2026 using Gemini 3 Flash, GPT-OSS 120B, Kimi K2, and Qwen3 32B.</p>
     </div>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "v4lnk6c8jr");
+    </script>
 </body>
 </html>
