--- a/blog.html
+++ b/blog.html
@@ -530,7 +530,21 @@
 <body>
     <div class="grain-overlay"></div>
 
-    <div class="container">
+    <!-- Navigation -->
+    <nav style="position: fixed; top: 0; left: 0; right: 0; display: flex; align-items: center; justify-content: space-between; padding: var(--space-md) var(--space-xl); background: rgba(10, 10, 12, 0.9); backdrop-filter: blur(10px); border-bottom: 1px solid var(--border-subtle); z-index: 1000;">
+        <a href="index.html" style="font-family: var(--font-display); font-size: 1.2rem; font-weight: 600; color: var(--text-primary); text-decoration: none;">So Long Sucker</a>
+        <div style="display: flex; align-items: center; gap: var(--space-lg);">
+            <a href="index.html" style="font-size: 0.9rem; color: var(--text-secondary); text-decoration: none;">Home</a>
+            <a href="game.html" style="font-size: 0.9rem; color: var(--text-secondary); text-decoration: none;">Play Game</a>
+            <a href="https://github.com/lout33/so-long-sucker" target="_blank" rel="noopener" title="Star on GitHub" style="display: flex; align-items: center; padding: var(--space-sm); border-radius: var(--radius-md); color: var(--text-secondary); text-decoration: none;">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/>
+                </svg>
+            </a>
+        </div>
+    </nav>
+
+    <div class="container" style="padding-top: calc(60px + var(--space-3xl));">
         <header>
             <span class="badge badge-gold">Research Article</span>
             <h1>We Made AI Play a 1950s Betrayal Game. Gemini Created Fake Banks to Steal From Its Allies.</h1>
