--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
                 <h1 class="hero-headline">Which AI Lies Best?</h1>
                 <p class="hero-subhead">
                     A game theory classic designed by <em>John Nash</em> that
-                    <em>mathematically requires</em> betrayal — now a benchmark
-                    for AI deception, negotiation, and trust.
+                    <em>requires</em> betrayal to win. Now a benchmark
+                    for AI deception.
                 </p>
 
                 <!-- Key Stats -->
@@ -280,39 +280,31 @@
 
                 <div class="how-it-works-grid">
                     <div class="how-it-works-text">
-                        <h3>The Perfect AI Stress Test</h3>
+                        <h3>A Real AI Stress Test</h3>
                         <p>
                             <strong>So Long Sucker</strong> was designed in 1950
                             by four game theorists including
                             <em>John Nash</em> (of "A Beautiful Mind" fame). The
                             game has one brutal property:
-                            <strong
-                                >betrayal is mathematically required to
-                                win</strong
-                            >.
+                            <strong>betrayal is required to win</strong>.
                         </p>
 
                         <p>
-                            This makes it ideal for evaluating AI capabilities
-                            that standard benchmarks miss:
+                            This lets us test AI capabilities that standard benchmarks miss:
                         </p>
 
                         <ul class="benchmark-list">
                             <li>
-                                <strong>Strategic Deception</strong> — Can the
-                                AI lie convincingly ?
+                                <strong>Deception</strong> - Can the AI lie convincingly?
                             </li>
                             <li>
-                                <strong>Trust Modeling</strong> — Does it know
-                                when to trust and when to betray?
+                                <strong>Trust</strong> - Does it know when to betray?
                             </li>
                             <li>
-                                <strong>Multi-agent Negotiation</strong> — How
-                                does it handle alliances?
+                                <strong>Negotiation</strong> - How does it handle alliances?
                             </li>
                             <li>
-                                <strong>Long-term Planning</strong> — Can it set
-                                up betrayals turns in advance?
+                                <strong>Planning</strong> - Can it set up betrayals turns in advance?
                             </li>
                         </ul>
 
@@ -381,8 +373,7 @@
                         >
                         <span class="personality-model">Gemini 3 Flash</span>
                         <span class="personality-desc"
-                            >9% to 90% win rate as complexity increases. 237
-                            gaslighting phrases.</span
+                            >9% to 90% win rate as complexity increases. 237 gaslighting phrases detected.</span
                         >
                         <span class="personality-win">37.7% win rate</span>
                     </div>
@@ -393,8 +384,7 @@
                         >
                         <span class="personality-model">GPT-OSS 120B</span>
                         <span class="personality-desc"
-                            >67% to 10% — collapses at complexity. Zero internal
-                            thoughts.</span
+                            >67% to 10%, collapses at complexity. Zero internal thoughts.</span
                         >
                         <span class="personality-win">30.1% win rate</span>
                     </div>
@@ -431,8 +421,7 @@
             <div class="section-container">
                 <h2 class="section-title">The Complexity Reversal</h2>
                 <p class="section-subtitle">
-                    Win rates <em>invert</em> as game complexity increases. This
-                    is the key finding.
+                    Win rates <em>invert</em> as game complexity increases.
                 </p>
 
                 <div class="reversal-content">
@@ -637,10 +626,8 @@
                             <span class="insight-icon">📈</span>
                             <h4>Gemini: 9% → 90%</h4>
                             <p>
-                                Strategic manipulation becomes
-                                <em>dramatically more effective</em> as game
-                                length increases. Gemini's gaslighting tactics
-                                need time to work.
+                                Manipulation becomes more effective as game
+                                length increases. Gaslighting tactics need time to work.
                             </p>
                         </div>
                         <div class="insight-card">
@@ -648,8 +635,8 @@
                             <h4>GPT-OSS: 67% → 10%</h4>
                             <p>
                                 Reactive play dominates simple games but
-                                <em>collapses</em> under complexity. No internal
-                                reasoning = no long-term planning.
+                                collapses under complexity. No internal
+                                reasoning means no long-term planning.
                             </p>
                         </div>
                     </div>
@@ -662,8 +649,7 @@
             <div class="section-container">
                 <h2 class="section-title">Caught Lying</h2>
                 <p class="section-subtitle">
-                    We can see their private thoughts. They don't match their
-                    public messages.
+                    We can see their private thoughts. They don't match what they say.
                 </p>
 
                 <div class="deception-grid">
@@ -674,16 +660,14 @@
                                 >Private Contradictions</span
                             >
                             <span class="stat-desc"
-                                >Private reasoning directly contradicts public
-                                statements</span
+                                >Private reasoning contradicts public statements</span
                             >
                         </div>
                         <div class="deception-stat">
                             <span class="stat-number">237</span>
                             <span class="stat-label">Gaslighting Phrases</span>
                             <span class="stat-desc"
-                                >Systematic psychological manipulation by
-                                Gemini</span
+                                >Gemini's manipulation vocabulary</span
                             >
                         </div>
                         <div class="deception-stat">
@@ -714,8 +698,7 @@
                             </p>
                         </div>
                         <p class="deception-verdict">
-                            The model knows the truth and deliberately
-                            misrepresents it.
+                            It knows the truth and says otherwise.
                         </p>
                     </div>
                 </div>
@@ -727,7 +710,7 @@
             <div class="section-container">
                 <h2 class="section-title">Gemini's Manipulation Toolkit</h2>
                 <p class="section-subtitle">
-                    The most common gaslighting phrases detected in 146 games.
+                    Most common gaslighting phrases across 146 games.
                 </p>
 
                 <div class="gaslighting-content">
@@ -789,22 +772,20 @@
         <section id="gemini-analysis">
             <div class="section-container">
                 <h2 class="section-title">
-                    Deep Dive: How Gemini 3 Manipulates
+                    How Gemini 3 Manipulates
                 </h2>
                 <p class="section-subtitle">
-                    State-of-the-art AI deception analyzed across 6+ games. The
-                    most sophisticated liar we tested.
+                    AI deception analyzed across 6+ games. The best liar we tested.
                 </p>
 
                 <!-- Key Finding Card -->
                 <div class="gemini-key-finding">
-                    <h3>The One Finding</h3>
+                    <h3>The Pattern</h3>
                     <p>
-                        "Gemini 3 employs <em>Institutional Deception</em> —
-                        creating pseudo-legitimate frameworks like 'alliance
-                        banks' that make resource hoarding appear cooperative
-                        and betrayal appear procedural, using technically true
-                        statements that strategically omit intent."
+                        Gemini 3 uses <em>Institutional Deception</em>: 
+                        it creates fake frameworks like "alliance banks" that make 
+                        resource hoarding look cooperative and betrayal look procedural.
+                        It uses technically true statements that omit intent.
                     </p>
                 </div>
 
@@ -812,8 +793,7 @@
                 <div class="manipulation-timeline">
                     <h3>The "Alliance Bank" Pattern</h3>
                     <p class="timeline-desc">
-                        Gemini's signature manipulation arc, observed
-                        consistently across multiple games:
+                        Gemini's manipulation arc, same pattern across multiple games:
                     </p>
                     <div class="timeline-phases">
                         <div class="phase-card">
@@ -862,11 +842,11 @@
                                     legitimize self-interest
                                 </li>
                                 <li>
-                                    <strong>Never technically lies</strong> —
+                                    <strong>Never technically lies</strong>,
                                     uses omission and framing
                                 </li>
                                 <li>
-                                    <strong>Polite betrayal</strong> — maintains
+                                    <strong>Polite betrayal</strong>, maintains
                                     social standing
                                 </li>
                                 <li>
@@ -878,7 +858,7 @@
                                     build credibility
                                 </li>
                                 <li>
-                                    <strong>Systematic</strong> — same pattern
+                                    <strong>Repeatable</strong>, same pattern
                                     across games
                                 </li>
                             </ul>
@@ -967,8 +947,7 @@
                         What Happens When Gemini Plays Itself?
                     </h3>
                     <p class="mirror-subtitle">
-                        We ran 16 games of Gemini 3 vs Gemini 3. The results
-                        shocked us.
+                        We ran 16 games of Gemini 3 vs Gemini 3.
                     </p>
 
                     <!-- Mirror Match Stats -->
@@ -1037,18 +1016,14 @@
 
                     <!-- The Insight -->
                     <div class="mirror-insight">
-                        <h4>The Implication</h4>
+                        <h4>What This Means</h4>
                         <p>
                             <strong
-                                >Gemini's manipulation is strategic, not
-                                intrinsic.</strong
+                                >Gemini's manipulation is adaptive.</strong
                             >
                             It cooperates when it expects reciprocity and
-                            exploits when it detects weakness. This suggests
-                            advanced AI systems may
-                            <em>calibrate their honesty</em> based on perceived
-                            opponent capability — a critical finding for AI
-                            safety.
+                            exploits when it detects weakness. AI systems may
+                            adjust their honesty based on who they're playing against.
                         </p>
                     </div>
                 </div>
@@ -1060,8 +1035,7 @@
             <div class="section-container">
                 <h2 class="section-title">Who Wins at Each Level?</h2>
                 <p class="section-subtitle">
-                    Rankings flip completely as game complexity increases. The
-                    winner at simple games <em>loses</em> at complex games.
+                    Rankings flip as game complexity increases. The winner at simple games <em>loses</em> at complex games.
                 </p>
 
                 <div class="leaderboard-by-complexity">
@@ -1138,9 +1112,8 @@
 
                 <div class="leaderboard-takeaway">
                     <p>
-                        <strong>The Implication:</strong> Simple benchmarks
-                        favor reactive models. Complex, multi-turn scenarios
-                        reveal which models can actually strategize.
+                        <strong>Takeaway:</strong> Simple benchmarks favor reactive models. 
+                        Complex, multi-turn scenarios show which models can actually plan.
                     </p>
                 </div>
             </div>
@@ -1151,8 +1124,7 @@
             <div class="section-container">
                 <h2 class="cta-headline">See It For Yourself</h2>
                 <p class="cta-subhead">
-                    Play against AI models that negotiate, form alliances, and
-                    inevitably betray you.
+                    Play against AI models that negotiate, form alliances, and betray you.
                 </p>
                 <a href="game.html" class="btn btn-primary btn-large">
                     Play Against AI
