--- a/index.html
+++ b/index.html
@@ -765,12 +765,7 @@
                     </div>
                 </div>
 
-                <div class="research-cta">
-                    <p>Want to dive deeper into the data?</p>
-                    <a href="analysis/presentation.html" class="btn btn-outline"
-                        >View Full Research Presentation →</a
-                    >
-                </div>
+
             </div>
         </section>
 
@@ -1150,16 +1145,10 @@
                 </p>
                 <div class="footer-links">
                     <a
-                        href="analysis/paper_so_long_sucker_sim_llm.md"
+                        href="blog.html"
                         target="_blank"
                         rel="noopener"
-                        >Research Paper</a
-                    >
-                    <a
-                        href="analysis/presentation.html"
-                        target="_blank"
-                        rel="noopener"
-                        >Presentation</a
+                        >Research Blog</a
                     >
                     <a href="results.html" target="_blank" rel="noopener"
                         >Full Results</a
