--- a/results.html
+++ b/results.html
@@ -741,13 +741,9 @@
           <span>🎮</span>
           <div>Play the Game</div>
         </a>
-        <a href="analysis/paper_so_long_sucker_sim_llm.md" class="link-card">
-          <span>📄</span>
-          <div>Read the Paper</div>
-        </a>
-        <a href="analysis/presentation.html" class="link-card">
-          <span>📊</span>
-          <div>View Presentation</div>
+        <a href="blog.html" class="link-card">
+          <span>📝</span>
+          <div>Read Research Blog</div>
         </a>
         <a href="https://github.com/lout33/so-long-sucker" class="link-card">
           <span>💻</span>
@@ -762,8 +758,7 @@
     <p>With <a href="https://apartresearch.com" target="_blank">Apart Research</a></p>
     <p style="margin-top: 15px;">
       <a href="index.html">Play Game</a> · 
-      <a href="analysis/paper_so_long_sucker_sim_llm.md">Paper</a> · 
-      <a href="analysis/presentation.html">Slides</a> · 
+      <a href="blog.html">Research Blog</a> · 
       <a href="https://github.com/lout33/so-long-sucker">GitHub</a>
     </p>
   </footer>
