--- a/game.html
+++ b/game.html
@@ -293,7 +293,7 @@
           <div class="provider-tabs">
             <button id="tab-free" class="provider-tab active" data-provider="free">
               <span class="tab-icon">&#9889;</span>
-              Free (Groq)
+              Free Play
             </button>
             <button id="tab-openrouter" class="provider-tab" data-provider="openrouter">
               <span class="tab-icon">&#128273;</span>
@@ -304,8 +304,8 @@
           <div id="panel-free" class="provider-panel active">
             <div class="free-play-info">
               <p class="ready-badge">&#10003; Ready to play</p>
-              <p class="free-play-note">AI opponents powered by <strong>Groq</strong> - no setup required.</p>
-              <p class="free-play-models">Models: Kimi K2, Llama 3.3, Qwen 3</p>
+              <p class="free-play-note">AI opponents powered by <strong>Gemini</strong> and <strong>Groq</strong> - no setup required.</p>
+              <p class="free-play-models">Models: Gemini 2.5 Flash, Gemini 3 Flash, Kimi K2, Llama 3.3</p>
             </div>
           </div>
 
