--- a/game.html
+++ b/game.html
@@ -305,7 +305,7 @@
             <div class="free-play-info">
               <p class="ready-badge">&#10003; Ready to play</p>
               <p class="free-play-note">AI opponents powered by <strong>Gemini</strong> and <strong>Groq</strong> - no setup required.</p>
-              <p class="free-play-models">Models: Gemini 2.5 Flash, Gemini 3 Flash, Kimi K2, Llama 3.3</p>
+              <p class="free-play-models">Models: Gemini 3 Flash, GPT-OSS, Kimi K2, Llama 3.3</p>
             </div>
           </div>
 
