feat: Phase 3 pilot (Claude, Maverick), paper, Bedrock provider
- Add paper/ with LaTeX source and figures for ArXiv
- Add Phase 3 pilot blog (blogv3.md) with Claude/Maverick data
- Add AWS Bedrock provider (Claude Sonnet/Opus 4.6)
- Add benchmark page and scores
- CLI improvements: negotiation tools, stuck-state recovery
- UI fixes and polish

--- a/blog.html
+++ b/blog.html
@@ -535,6 +535,8 @@
         <a href="index.html" style="font-family: var(--font-display); font-size: 1.2rem; font-weight: 600; color: var(--text-primary); text-decoration: none;">So Long Sucker</a>
         <div style="display: flex; align-items: center; gap: var(--space-lg);">
             <a href="index.html" style="font-size: 0.9rem; color: var(--text-secondary); text-decoration: none;">Home</a>
+            <a href="benchmark.html" style="font-size: 0.9rem; color: var(--text-secondary); text-decoration: none;">Benchmark</a>
+            <a href="blog2.html" style="font-size: 0.9rem; color: var(--gold, #d4af37); text-decoration: none;">Part 2 →</a>
             <a href="game.html" style="font-size: 0.9rem; color: var(--text-secondary); text-decoration: none;">Play Game</a>
             <a href="https://github.com/lout33/so-long-sucker" target="_blank" rel="noopener" title="Star on GitHub" style="display: flex; align-items: center; padding: var(--space-sm); border-radius: var(--radius-md); color: var(--text-secondary); text-decoration: none;">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
@@ -808,13 +810,13 @@
         <div class="cta-box">
             <h3>Try It Yourself</h3>
             <p>The game is open source and free to play:</p>
-            <p><a href="https://so-long-sucker.vercel.app/" class="btn">so-long-sucker.vercel.app</a></p>
+            <p><a href="https://so-long-sucker.vercel.app/game.html" class="btn">Play the Game</a></p>
             <ul>
-                <li>Play against AI models using your own API keys</li>
-                <li>Watch AI vs AI simulations</li>
-                <li>Download the data and run your own analysis</li>
+                <li><a href="https://so-long-sucker.vercel.app/game.html">Play against AI models</a> using your own API keys</li>
+                <li><a href="https://so-long-sucker.vercel.app/game.html">Watch AI vs AI simulations</a></li>
+                <li><a href="https://github.com/lout33/so-long-sucker" target="_blank" rel="noopener">Download the data and run your own analysis</a></li>
             </ul>
-            <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: var(--space-md); margin-bottom: 0;">All code is on GitHub. Data stays local. No tracking.</p>
+            <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: var(--space-md); margin-bottom: 0;">All code on <a href="https://github.com/lout33/so-long-sucker" target="_blank" rel="noopener">GitHub</a>. Data stays local. No tracking.</p>
         </div>
 
         <div class="question-box">
