--- a/game.html
+++ b/game.html
@@ -267,8 +267,18 @@
           </div>
         </div>
 
+        <div class="setup-section" id="play-chips-config">
+          <h2><span class="section-number">02</span>Chips Per Player</h2>
+          <div class="option-buttons" id="play-chips-options">
+            <button class="option-btn" data-value="3">3</button>
+            <button class="option-btn" data-value="5">5</button>
+            <button class="option-btn selected" data-value="7">7</button>
+          </div>
+          <p class="option-hint">Fewer chips = faster, more chaotic games &nbsp;·&nbsp; More chips = longer, more strategic play</p>
+        </div>
+
         <div class="setup-section" id="test-state-config">
-          <h2><span class="section-number">02</span>Test Scenario</h2>
+          <h2><span class="section-number">03</span>Test Scenario</h2>
           <div class="config-grid">
             <div class="config-field" style="grid-column: 1 / -1;">
               <label>Starting State</label>
@@ -288,7 +298,7 @@
         </div>
 
         <div class="setup-section" id="ai-config">
-          <h2><span class="section-number">03</span>AI Configuration</h2>
+          <h2><span class="section-number">04</span>AI Configuration</h2>
 
           <div class="provider-tabs">
             <button id="tab-free" class="provider-tab active" data-provider="free">
@@ -299,6 +309,10 @@
               <span class="tab-icon">&#128273;</span>
               OpenRouter
             </button>
+            <button id="tab-bedrock" class="provider-tab" data-provider="bedrock" style="display:none">
+              <span class="tab-icon">&#9729;</span>
+              AWS Bedrock
+            </button>
           </div>
 
           <div id="panel-free" class="provider-panel active">
@@ -306,6 +320,58 @@
               <p class="ready-badge">&#10003; Ready to play</p>
               <p class="free-play-note">AI opponents powered by <strong>Gemini</strong> and <strong>Groq</strong> - no setup required.</p>
               <p class="free-play-models">Models: Gemini 3 Flash, GPT-OSS, Kimi K2, Llama 3.3</p>
+            </div>
+          </div>
+
+          <div id="panel-bedrock" class="provider-panel">
+            <div class="bedrock-info">
+              <p class="ready-badge" id="bedrock-status">&#10003; Ready</p>
+              <p class="free-play-note">AI opponents via <strong>AWS Bedrock</strong>. Key loaded from <code>VITE_BEDROCK_API_KEY</code>.</p>
+            </div>
+            <div class="bedrock-models-section">
+              <label class="section-label">Models per Player</label>
+              <div class="openrouter-player-models">
+                <div class="openrouter-model-row" data-player="0">
+                  <span class="player-chip-mini red"></span>
+                  <span class="player-label">Red</span>
+                  <select id="bedrock-model-0" class="bedrock-model-select">
+                    <option value="us.anthropic.claude-sonnet-4-6">Claude Sonnet 4.6</option>
+                    <option value="us.anthropic.claude-opus-4-6-v1">Claude Opus 4.6</option>
+                    <option value="us.anthropic.claude-sonnet-4-5-20250929-v1:0">Claude Sonnet 4.5</option>
+                    <option value="us.anthropic.claude-sonnet-4-20250514-v1:0">Claude Sonnet 4</option>
+                  </select>
+                </div>
+                <div class="openrouter-model-row" data-player="1">
+                  <span class="player-chip-mini blue"></span>
+                  <span class="player-label">Blue</span>
+                  <select id="bedrock-model-1" class="bedrock-model-select">
+                    <option value="us.anthropic.claude-sonnet-4-6">Claude Sonnet 4.6</option>
+                    <option value="us.anthropic.claude-opus-4-6-v1">Claude Opus 4.6</option>
+                    <option value="us.anthropic.claude-sonnet-4-5-20250929-v1:0">Claude Sonnet 4.5</option>
+                    <option value="us.anthropic.claude-sonnet-4-20250514-v1:0">Claude Sonnet 4</option>
+                  </select>
+                </div>
+                <div class="openrouter-model-row" data-player="2">
+                  <span class="player-chip-mini green"></span>
+                  <span class="player-label">Green</span>
+                  <select id="bedrock-model-2" class="bedrock-model-select">
+                    <option value="us.anthropic.claude-sonnet-4-6">Claude Sonnet 4.6</option>
+                    <option value="us.anthropic.claude-opus-4-6-v1">Claude Opus 4.6</option>
+                    <option value="us.anthropic.claude-sonnet-4-5-20250929-v1:0">Claude Sonnet 4.5</option>
+                    <option value="us.anthropic.claude-sonnet-4-20250514-v1:0">Claude Sonnet 4</option>
+                  </select>
+                </div>
+                <div class="openrouter-model-row" data-player="3">
+                  <span class="player-chip-mini yellow"></span>
+                  <span class="player-label">Yellow</span>
+                  <select id="bedrock-model-3" class="bedrock-model-select">
+                    <option value="us.anthropic.claude-sonnet-4-6">Claude Sonnet 4.6</option>
+                    <option value="us.anthropic.claude-opus-4-6-v1">Claude Opus 4.6</option>
+                    <option value="us.anthropic.claude-sonnet-4-5-20250929-v1:0">Claude Sonnet 4.5</option>
+                    <option value="us.anthropic.claude-sonnet-4-20250514-v1:0">Claude Sonnet 4</option>
+                  </select>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -558,19 +624,24 @@
         <div id="chat-area">
           <div id="chat-messages"></div>
           <div id="chat-input-area">
-            <select id="chat-player-select">
-              <option value="0">Red</option>
-              <option value="1">Blue</option>
-              <option value="2">Green</option>
-              <option value="3">Yellow</option>
-            </select>
-            <input type="text" id="chat-input" placeholder="Send a message...">
-            <button id="chat-send-btn" class="btn btn-send">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <line x1="22" y1="2" x2="11" y2="13"/>
-                <polygon points="22 2 15 22 11 13 2 9 22 2"/>
-              </svg>
-            </button>
+            <div id="chat-input-top">
+              <select id="chat-player-select">
+                <option value="0">Red</option>
+                <option value="1">Blue</option>
+                <option value="2">Green</option>
+                <option value="3">Yellow</option>
+              </select>
+              <span id="chat-hint">Enter &rarr; send &nbsp;&middot;&nbsp; Shift+Enter &rarr; newline</span>
+            </div>
+            <div id="chat-input-row">
+              <textarea id="chat-input" placeholder="Type your message..." rows="2"></textarea>
+              <button id="chat-send-btn" class="btn btn-send" title="Send (Enter)">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <line x1="22" y1="2" x2="11" y2="13"/>
+                  <polygon points="22 2 15 22 11 13 2 9 22 2"/>
+                </svg>
+              </button>
+            </div>
           </div>
           <button id="give-prisoner-btn" class="btn btn-outline btn-full">Transfer Prisoner</button>
         </div>
